--- a/view/layout/mobile/default.tpl.html
+++ b/view/layout/mobile/default.tpl.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-<script type="text/javascript" src="http://lib.sinaapp.com/js/jq.mobi/1.0/jq.mobi.min.js"></script> 
-<script type="text/javascript" src="http://lib.sinaapp.com/js/jq.mobi/1.0/jq.ui.min.js"></script> 
+<script type="text/javascript" src="https://lib.sinaapp.com/js/jq.mobi/1.0/jq.mobi.min.js"></script> 
+<script type="text/javascript" src="https://lib.sinaapp.com/js/jq.mobi/1.0/jq.ui.min.js"></script> 
 </head>
 <body>
 <div id="jQUi">
