--- a/view/layout/web/default.tpl.html
+++ b/view/layout/web/default.tpl.html
@@ -57,7 +57,7 @@
 </div>
 <!--  / float box  -->
     
-    <script src="http://lib.sinaapp.com/js/jquery/1.8/jquery.min.js"></script>
+    <script src="https://lib.sinaapp.com/js/jquery/1.8/jquery.min.js"></script>
     <script src="static/script/bootstrap.min.js"></script>
     <!--[if IE 6]>    
     		 <script src="static/script/ie6.min.js"></script>
